k8s/backend-exp-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-exp-api
  labels:
    app: backend-exp-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-exp-api
  template:
    metadata:
      labels:
        app: backend-exp-api
    spec:
      containers:
      - name: backend-exp-api
        image: laxmi.azurecr.io/backend-app-with-esp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 1200
          protocol: TCP  
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: backend-exp-service
  labels:
    app: backend-exp-service
spec:
  selector:
    app: backend-exp-api
  type: LoadBalancer  
  ports:
  - port: 1200
    protocol: TCP
    targetPort: 1200
    nodePort: 30000
