k8s/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-app
  labels:
    app: jenkins-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-app
  template:
    metadata:
      labels:
        app: jenkins-app
    spec:
      containers:
      - name: jenkins-app
        image: jenkins/jenkins:latest
        imagePullPolicy: Always
        ports:
        - name: http-port
          containerPort: 8080
        - name: jnlp-port
          containerPort: 50000
        volumeMounts:
          - name: jenkins-vol
            mountPath: /var/jenkins_vol 
      volumes:
      - name: jenkins-vol
        emptyDir: {}     
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-app-service
  labels:
    app: jenkins-app-service
spec:
  selector:
    app: jenkins-app
  type: LoadBalancer  
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30003
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp-service
  labels:
    app: jenkins-jnlp-service
spec:
  selector:
    app: jenkins-app
  type: ClusterIP  
  ports:
  - port: 50000
    protocol: TCP
    targetPort: 50000
