k8s/mongo-express-deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-ui
  labels:
    app: mongodb-express-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-express-ui
  template:
    metadata:
      labels:
        app: mongodb-express-ui
    spec:
      containers:
      - name: mongodb-express-ui
        image: mongo-express 
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-exp-service
  labels:
    app: mongodb-exp-service
spec:
  selector:
    app: mongodb-express-ui 
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
